Mit Colab erstellt

--- a/Stunde_04/codingforlawyers-04.ipynb
+++ b/Stunde_04/codingforlawyers-04.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rps007/codingforlawyers/blob/main/Stunde_04/codingforlawyers-04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BP761/codingforlawyers/blob/main/Stunde_04/codingforlawyers-04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -21,11 +21,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Z5yqncWIgbB4"
+        "id": "Z5yqncWIgbB4",
+        "outputId": "5e546536-753e-4e7a-b28f-923bde8925ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'codingforlawyers'...\n",
+            "remote: Enumerating objects: 25, done.\u001b[K\n",
+            "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 25 (delta 6), reused 18 (delta 2), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (25/25), 368.38 KiB | 5.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (6/6), done.\n",
+            "\n",
+            "Current working directory set to: /content/codingforlawyers\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import userdata\n",
         "import os\n",
@@ -38,7 +58,7 @@
         "!git config --global user.email {gitemail}\n",
         "\n",
         "repo = \"codingforlawyers\" # fill in repo\n",
-        "username = \"rps007\"\n",
+        "username = \"BP761\"\n",
         "repository = f\"https://github.com/{username}/{repo}.git\"\n",
         "\n",
         "\n",
@@ -64,30 +84,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nENg-LknIKdA",
-        "outputId": "f6453421-e317-444b-b5ed-fca07b7b38bd"
+        "outputId": "b1b6b312-05cd-4859-d859-e73d0f276c3b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[main ed2de7a] Your commit message\n",
-            " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
-            " create mode 100644 Stunde_04/rs19831215_1bvr020983.pdf\n",
-            "Enumerating objects: 6, done.\n",
-            "Counting objects: 100% (6/6), done.\n",
-            "Delta compression using up to 2 threads\n",
-            "Compressing objects: 100% (3/3), done.\n",
-            "Writing objects: 100% (4/4), 280.57 KiB | 16.50 MiB/s, done.\n",
-            "Total 4 (delta 0), reused 0 (delta 0), pack-reused 0\n",
-            "To https://github.com/rps007/codingforlawyers.git\n",
-            "   aafbff9..ed2de7a  main -> main\n"
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "nothing to commit, working tree clean\n",
+            "Everything up-to-date\n"
           ]
         }
       ],
@@ -108,16 +122,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "-QNwn67z31Ml"
+        "id": "-QNwn67z31Ml",
+        "outputId": "bcff58a4-60ee-452e-fedd-95704c937aa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pymupdf\n",
+            "  Downloading pymupdf-1.26.0-cp39-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (3.4 kB)\n",
+            "Downloading pymupdf-1.26.0-cp39-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (24.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m47.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pymupdf\n",
+            "Successfully installed pymupdf-1.26.0\n",
+            "Collecting icecream\n",
+            "  Downloading icecream-2.1.4-py3-none-any.whl.metadata (1.3 kB)\n",
+            "Collecting colorama>=0.3.9 (from icecream)\n",
+            "  Downloading colorama-0.4.6-py2.py3-none-any.whl.metadata (17 kB)\n",
+            "Requirement already satisfied: pygments>=2.2.0 in /usr/local/lib/python3.11/dist-packages (from icecream) (2.19.1)\n",
+            "Collecting executing>=2.1.0 (from icecream)\n",
+            "  Downloading executing-2.2.0-py2.py3-none-any.whl.metadata (8.9 kB)\n",
+            "Collecting asttokens>=2.0.1 (from icecream)\n",
+            "  Downloading asttokens-3.0.0-py3-none-any.whl.metadata (4.7 kB)\n",
+            "Downloading icecream-2.1.4-py3-none-any.whl (14 kB)\n",
+            "Downloading asttokens-3.0.0-py3-none-any.whl (26 kB)\n",
+            "Downloading colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
+            "Downloading executing-2.2.0-py2.py3-none-any.whl (26 kB)\n",
+            "Installing collected packages: executing, colorama, asttokens, icecream\n",
+            "Successfully installed asttokens-3.0.0 colorama-0.4.6 executing-2.2.0 icecream-2.1.4\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (4.67.1)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pymupdf\n",
         "!pip install icecream\n",
         "!pip install tqdm"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from icecream import ic\n",
+        "a = 4\n",
+        "ic(a)"
+      ],
+      "metadata": {
+        "id": "NoTmZfWv45QK",
+        "outputId": "f4f90727-cbbe-4e93-8560-7e1f673a7257",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ic| a: 4\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "liste = [1, 2, 3]\n",
+        "\n",
+        "for bsdf in liste:\n",
+        ""
+      ],
+      "metadata": {
+        "id": "vl47vZxN841r"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -151,14 +247,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
-        "id": "LTCqE6zQ38ki"
+        "id": "LTCqE6zQ38ki",
+        "outputId": "b6e4a444-05ea-4a4e-c0bb-bfb04683f6ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "b'Leits\\xc3\\xa4tze\\nzum Urteil des Ersten Senats vom 15. Dezember 1983\\n- 1 BvR 209/83 -\\n- 1 BvR 269/83 -\\n- 1 BvR 362/83 -\\n- 1 BvR 420/83 -\\n- 1 BvR 440/83 -\\n- 1 BvR 484/83 -\\n1. Unter den Bedingungen der modernen Datenverarbeitung wird der\\nSchutz des Einzelnen gegen unbegrenzte Erhebung, Speicherung,\\nVerwendung und Weitergabe seiner pers\\xc3\\xb6nlichen Daten von dem all-\\ngemeinen Pers\\xc3\\xb6nlichkeitsrecht des GG Art 2 Abs. 1 in Verbindung mit\\nGG Art 1 Abs. 1 umfa\\xc3\\x9ft. Das Grundrecht gew\\xc3\\xa4hrleistet insoweit die Be-\\nfugnis des Einzelnen, grunds\\xc3\\xa4tzlich selbst \\xc3\\xbcber die Preisgabe und\\nVerwendung seiner pers\\xc3\\xb6nlichen Daten zu bestimmen.\\n2. Einschr\\xc3\\xa4nkungen dieses Rechts auf \"informationelle Selbstbestim-\\nmung\" sind nur im \\xc3\\xbcberwiegenden Allgemeininteresse zul\\xc3\\xa4ssig. Sie\\nbed\\xc3\\xbcrfen einer verfassungsgem\\xc3\\xa4\\xc3\\x9fen gesetzlichen Grundlage, die dem\\nrechtsstaatlichen Gebot der Normenklarheit entsprechen mu\\xc3\\x9f. Bei sei-\\nnen Regelungen hat der Gesetzgeber ferner den Grundsatz der Ver-\\nh\\xc3\\xa4ltnism\\xc3\\xa4\\xc3\\x9figkeit zu beachten. Auch hat er organisatorische und ver-\\nfahrensrechtliche Vorkehrungen zu treffen, welche der Gefahr einer\\nVerletzung des Pers\\xc3\\xb6nlichkeitsrechts entgegenwirken.\\n3. Bei den verfassungsrechtlichen Anforderungen an derartige Ein-\\nschr\\xc3\\xa4nkungen ist zu unterscheiden zwischen personenbezogenen Da-\\nten, die in individualisierter, nicht anonymer Form erhoben und verar-\\nbeitet werden, und solchen, die f\\xc3\\xbcr statistische Zwecke bestimmt sind.\\nBei der Datenerhebung f\\xc3\\xbcr statistische Zwecke kann eine enge und\\nkonkrete Zweckbindung der Daten nicht verlangt werden. Der Informa-\\ntionserhebung und Informationsverarbeitung m\\xc3\\xbcssen aber innerhalb\\ndes Informationssystems zum Ausgleich entsprechende Schranken\\ngegen\\xc3\\xbcberstehen.\\n1/53\\n'\n",
             "b'4. Das Erhebungsprogramm des Volksz\\xc3\\xa4hlungsgesetzes 1983 (\\xc2\\xa7 2 Nr. 1\\nbis 7, \\xc2\\xa7\\xc2\\xa7 3 bis 5) f\\xc3\\xbchrt nicht zu einer mit der W\\xc3\\xbcrde des Menschen un-\\nvereinbaren Registrierung und Katalogisierung der Pers\\xc3\\xb6nlichkeit; es\\nentspricht auch den Geboten der Normenklarheit und der Verh\\xc3\\xa4ltnis-\\nm\\xc3\\xa4\\xc3\\x9figkeit. Indessen bedarf es zur Sicherung des Rechts auf informa-\\ntionelle Selbstbestimmung erg\\xc3\\xa4nzender verfahrensrechtlicher Vorkeh-\\nrungen f\\xc3\\xbcr Durchf\\xc3\\xbchrung und Organisation der Datenerhebung.\\n5. Die in VoZ\\xc3\\xa4hlG 1983 \\xc2\\xa7 9 Abs.1 bis 3 vorgesehenen \\xc3\\x9cbermittlungsrege-\\nlungen (unter anderem Melderegisterabgleich) versto\\xc3\\x9fen gegen das\\nallgemeine Pers\\xc3\\xb6nlichkeitsrecht. Die Weitergabe zu wissenschaftli-\\nchen Zwecken (VoZ\\xc3\\xa4hlG 1983 \\xc2\\xa7 9 Abs. 4) ist mit dem Grundgesetz ver-\\neinbar.\\n2/53\\n'\n",
@@ -219,7 +319,7 @@
       "source": [
         "import pymupdf\n",
         "\n",
-        "file = 'rs19831215_1bvr020983.pdf'\n",
+        "file = 'Stunde_04/rs19831215_1bvr020983.pdf'\n",
         "\n",
         "doc = pymupdf.open(file) # open a document\n",
         "out = open(\"output.txt\", \"wb\") # create a text output\n",
@@ -242,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Hs1V6n3x8jj6"
       },
@@ -279,15 +379,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Gobx7StExPe6"
+      },
       "source": [
         "#### **extract text from rectangle** ####"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "BODAeVD_xPe6",
+        "outputId": "7318f9cd-07e4-48c1-8d25-9bb55fedbfb9"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -339,15 +444,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "J9qHPy-SxPe7"
+      },
       "source": [
         "#### **write extracted text to file** ####"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "4VEOq6lexPe7"
+      },
       "outputs": [],
       "source": [
         "#write text to file\n",
@@ -358,15 +467,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "fVCPEfYIxPe8"
+      },
       "source": [
         "#### **read text from file**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "deKL8HmixPe8",
+        "outputId": "59a5d255-26c2-4db9-90f4-38485db848de"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -470,7 +584,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "YJx62Zr9xPe9"
+      },
       "source": [
         "#### **write dataframe to file using pickle**"
       ]
@@ -478,7 +594,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "WZz1kSSMxPe9"
+      },
       "outputs": [],
       "source": [
         "import pickle\n",
@@ -492,7 +610,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "BUrtkL9YxPe-"
+      },
       "source": [
         "#### **unpickle dataframe**"
       ]
@@ -500,7 +620,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "_jFM7t8-xPe-"
+      },
       "outputs": [],
       "source": [
         "import pickle\n",
@@ -516,8 +638,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "kopp-3_12",
